--- a/MireaProject/app/src/main/AndroidManifest.xml
+++ b/MireaProject/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".ui.story.db.App"
         android:theme="@style/Theme.MireaProject">
         <service
             android:name=".PlayerService"
